--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600&family=Poppins:wght@200;300;400;500;600;700&family=Raleway:wght@500;700&family=Roboto:wght@100;300;400;500;700;900&family=Varela&family=Varela+Round&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
